feat(email): add API Send Email Update Build
